Add pinta package
Added pinta package to be managed with nix-hm.

--- a/packages.toml
+++ b/packages.toml
@@ -561,6 +561,11 @@ common = [{ name = "gh", method = "nix-hm" }]
 type = "gui"
 common = [{ name = "fonts", method = "nix-hm" }]
 
+## image editor
+[pinta]
+type = "gui"
+nixos = [{ name = "pinta", method = "nix-hm" }]
+
 ## key remapper
 [keyremap]
 type = "gui"
