Enable steam and fix monitor descriptions
Enabled steam for nixos and updated the monitor descriptions in the
hyprland config to include `desc:` to match the output of `hyprctl
monitors`.

--- a/packages.toml
+++ b/packages.toml
@@ -601,6 +601,11 @@ type = "gui"
 darwin = [{ name = "wireguard-tools", method = "nix" }]
 common = [{ name = "wireguard-tools", method = "nix-hm" }]
 
+## steam
+[steam]
+type = "gui"
+nixos = [{ name = "steam", method = "nix" }]
+
 ## macos only
 [utils]
 type = "gui"
