Replace pre-commit with prek
Replaced pre-commit with prek in the nix configuration and
packages.toml.
This change ensures that the system uses prek instead of pre-commit
for managing pre-commit hooks.

--- a/packages.toml
+++ b/packages.toml
@@ -124,7 +124,7 @@ common = [
 type = "basic"
 common = [
   { name = "git", method = "nix-hm" },
-  { name = "pre-commit", method = "nix-hm" },
+  { name = "prek", method = "nix-hm" },
 ]
 
 [sheldon]
