--- a/packages.toml
+++ b/packages.toml
@@ -510,9 +510,10 @@ type = "gui"
 nixos = [
   { name = "niri", method = "nix" },
   { name = "niri", method = "nix-hm" },
+  { name = "xwayland-satellite ", method = "nix-hm" },
   # { name = "hyprland", method = "nix" },
   # { name = "hyprland", method = "nix-hm" },
-  { name = "xdg-desktop-portal-hyprland", method = "nix" },
+  # { name = "xdg-desktop-portal-hyprland", method = "nix" },
   { name = "waybar", method = "nix-hm" },
   { name = "mako", method = "nix-hm" },
   { name = "networkmanagerapplet", method = "nix-hm" },
