--- a/packages.toml
+++ b/packages.toml
@@ -510,15 +510,16 @@ type = "gui"
 nixos = [
   { name = "niri", method = "nix" },
   { name = "niri", method = "nix-hm" },
-  { name = "xwayland-satellite ", method = "nix-hm" },
+  { name = "xwayland-satellite", method = "nix-hm" },
+  { name = "swaybg", method = "nix-hm" },
   # { name = "hyprland", method = "nix" },
   # { name = "hyprland", method = "nix-hm" },
   # { name = "xdg-desktop-portal-hyprland", method = "nix" },
+  # { name = "hyprshot", method = "nix-hm" },
+  # { name = "hyprcursor", method = "nix-hm" },
   { name = "waybar", method = "nix-hm" },
   { name = "mako", method = "nix-hm" },
   { name = "networkmanagerapplet", method = "nix-hm" },
-  { name = "hyprshot", method = "nix-hm" },
-  { name = "hyprcursor", method = "nix-hm" },
   { name = "playerctl", method = "nix-hm" },
   { name = "pwvucontrol", method = "nix-hm" },
   { name = "brightnessctl", method = "nix-hm" },
