--- a/packages.toml
+++ b/packages.toml
@@ -523,18 +523,19 @@ nixos = [
   { name = "niri", method = "nix" },
   { name = "niri", method = "nix-hm" },
   { name = "xwayland-satellite", method = "nix-hm" },
-  { name = "swaybg", method = "nix-hm" },
+  { name = "noctalia", method = "nix-hm" },
+  #{ name = "swaybg", method = "nix-hm" },
   # { name = "hyprland", method = "nix" },
   # { name = "hyprland", method = "nix-hm" },
   # { name = "xdg-desktop-portal-hyprland", method = "nix" },
   # { name = "hyprshot", method = "nix-hm" },
   # { name = "hyprcursor", method = "nix-hm" },
-  { name = "waybar", method = "nix-hm" },
-  { name = "mako", method = "nix-hm" },
-  { name = "networkmanagerapplet", method = "nix-hm" },
-  { name = "playerctl", method = "nix-hm" },
-  { name = "pwvucontrol", method = "nix-hm" },
-  { name = "brightnessctl", method = "nix-hm" },
+  # { name = "waybar", method = "nix-hm" },
+  # { name = "mako", method = "nix-hm" },
+  # { name = "networkmanagerapplet", method = "nix-hm" },
+  # { name = "playerctl", method = "nix-hm" },
+  # { name = "pwvucontrol", method = "nix-hm" },
+  # { name = "brightnessctl", method = "nix-hm" },
   { name = "gnome-keyring", method = "nix-hm" },
   { name = "libsecret", method = "nix-hm" },
   { name = "seahorse", method = "nix-hm" },
